--- a/t.tex
+++ b/t.tex
@@ -7,8 +7,8 @@
 \usepackage{graphicx,amsmath,amssymb,rotating,booktabs,url,color,enumitem}	\DeclareUrlCommand\url{\def\UrlLeft{<}\def\UrlRight{>}\urlstyle{tt}}  
 \usepackage{upgreek}
 
-%\usepackage[backend=biber]{biblatex} 
-\usepackage{biblatex} 
+\usepackage[backend=biber]{biblatex} 
+%\usepackage{biblatex} 
 %\usepackage[backend=biber, style=/home/filip/d/biblatex-phys/phys, articletitle=true, biblabel=enumerate, chaptertitle=true,  
   %pageranges=true, sorting=none, isbn=false, url=false, doi=false, eprint=false, hyperref=true, firstinits=true]{biblatex}
 %\usepackage[unicode=true,pdftitle={\WorkTitle}, pdfauthor={\FirstandFamilyName}, bookmarks=true, colorlinks=true, breaklinks=true, urlcolor=black, citecolor=black, linkcolor=black, breaklinks=true, plainpages=false,pdfpagelabels=true]{hyperref}
