--- a/theory.tex
+++ b/theory.tex
@@ -995,6 +995,8 @@ ref Homogenisation issues - response to our paper from OpEx
 %% The tunable negative permittivity and negative permeability of percolative Fe/Al2O3 composites in radio frequency range with
 %% Negative index may arise from resonances
 
+% cite Negative Refraction of Natural Composite Based on Graphene Barium Ferrite --  Karen  Oganisianr PIERS 2015 Prague
+
 \subsection{What are metamaterials and photonic crystals?} %{{{
 \paragraph{todo}%{{{
 \add{
