--- a/conclusion.tex
+++ b/conclusion.tex
@@ -13,6 +13,7 @@
 
 
 \section{Applications of periodic structures}
+%Ref. \cite{zheludev2010road} identifies major points of metamaterial research in reaching chirality, negative index of refraction, artificial magnetism, unusually low or high permittivity, building transformation optics e.g. for electromagnetic cloaking, engineering dispersion, sensor MMs, switchable MMs, amplifying MMs, enhanced nonlinearity, and quantum effects.
 \subsection{One-dimensional structures}%{{{
 %}}}
 \subsection{Planar photonic band-gap structures}%{{{
