--- a/fdphd.bib
+++ b/fdphd.bib
@@ -462,6 +462,15 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={2011},
   organization={IEEE}
 }
+@article{zheludev2010road,
+  title={The road ahead for metamaterials},
+  author={Zheludev, Nikolay I},
+  journal={Science},
+  volume={328},
+  number={5978},
+  pages={582--583},
+  year={2010}
+}
 /*}}}*/
 %  -- homogenisation -- /*{{{*/
 @article{nicolson1970measurement,
@@ -630,7 +639,6 @@ j%% TODO understand what this is about
   pages={1--16},
   year={2003}
 }
-% /*}}}*/
 
 
 @article{zengerle1987light,
@@ -643,6 +651,7 @@ j%% TODO understand what this is about
   year={1987},
   publisher={Taylor \& Francis}
 }
+% /*}}}*/
 
 
 
@@ -832,11 +841,22 @@ j%% TODO understand what this is about
 
 % Gombos 2013 metamaterial supra JAP  2013
 % Choi 2011 THzmetamaterial with unnaturally high N
-% OBrien 2002 PBG and magnetism in dielectric metamaterial
 % Pawlak 2010 metamaterial by self organization
 % SC
 % Weiner Transmission through metallic slits
 
+/*}}}*/
+% -- resonant metamaterials --/*{{{*/
+@article{koschny2004effective,
+  title={Effective medium theory of left-handed materials},
+  author={Koschny, Th and Kafesaki, M and Economou, EN and Soukoulis, CM},
+  journal={Physical review letters},
+  volume={93},
+  number={10},
+  pages={107402},
+  year={2004},
+  publisher={APS}
+}
 /*}}}*/
 % -- Fishnets, meshes and EOT --/*{{{*/
 @article{rockstuhl2008light,
