--- a/result.tex
+++ b/result.tex
@@ -212,6 +212,11 @@ We performed series of experiments to measure the effective permeability  $\mu_{
 \begin{figure} \caption{SphereWire sketch}  \centering  \includegraphics[width=10cm]{img/SphereWire_sketch.pdf} \end{figure} \clearpage
 
 % approximation for frequency well below the grid-resonance  
+
+% 
+An elaborate comparison of resonant metallic structures, with clear effect of adding the wire to the transmission spectra, can be found e.g. in Ref. \cite{koschny2004effective}.
+
+
 %}}}
 \section{Dielectric rods parallel to magnetic field} % references to ->
 \label{sect_diel_rods_mag}
@@ -221,6 +226,9 @@ We performed series of experiments to measure the effective permeability  $\mu_{
 \begin{figure} \caption{img/HRods\_eps100\_R12\_PWEM.pdf}  \centering \includegraphics[width=10cm]{img/HRods_eps100_R12_PWEM.pdf} \end{figure} \clearpage
 %\begin{figure} \caption{img/HRods\_sketch.pdf}  \centering \includegraphics[width=10cm]{img/HRods_sketch.pdf} \end{figure} \clearpage ## nonexistent
 % todo? analytic Mie resonance frequency? -> OBrien&Pendry2002, szabos etc
+analytic shape of the Mie resonance, \cite{obrien2002photonic} 
+
+
 \add{
 Are there also different, non-Bragg, mechanisms that can create band gaps?
 
