--- a/theory.tex
+++ b/theory.tex
@@ -931,7 +931,7 @@ If the periodic structure is not homogeneous, that is, $\epsrl(\omega,\rr)$ or $
 % with the coefficients $c_{ijk}$ being TODO? add equation?
 characteristic for the structure, defining possibly nonzero amplitudes for every branch plotted in Fig. \ref{fg_phcfolding}. Note this does not alleviate the ambiguity of choice of the Bloch wavevector $\KK$.
 
-The dependence of the Bloch wavevector $\KK$ on frequency can be plotted in the same way  as it was for homogeneous media, with the difference that all branches are present simultaneously. %% TODO note that this fig phcfolding is only for one direction; plotting K for other directions requires using IFC
+The dependence of the Bloch wavevector $\KK$ on frequency can be plotted in the same way as it was for homogeneous media, with the difference that all branches are present simultaneously. %% TODO note that this fig phcfolding is only for one direction; plotting K~for other directions requires using IFC
 
 %}}}
 \paragraph{Reciprocal space, Brillouin zones and Isofrequency contours} %{{{ TODO
@@ -942,24 +942,9 @@ The dependence of the Bloch wavevector $\KK$ on frequency can be plotted in the 
 
 -> TODO doplnit "PhC book": dispersní křivky atd.
 
-A different view to the formation of the dispersion curves can be drawn in analogy with the \textit{tight-binding} model in solid-state physics, first analyzing the unit cells isolated in free space, and then taking into account their mutual interaction that shifts the frequency up, or down. \label{hopping}
-The 
-This is . %-- individual oscillators with frequency more-or-less dependent on
-
-Returning to the figure of dispersion curves in a periodic structure, % TODO ref
-the $\Gamma$ point in the Brillouin zone, where $k = 0$, can be identified with Neumann boundary conditions, where we require $dE/dx = 0$ (otherwise the derivative of the field $E$ would not be continuous). % this also holds for other boundaries, on the $y$- and $z$-axis
-
-In contrast, the $X$ point, where $k_x = 2\pi/a_x$, corresponds to the Dirichlet boundary condition at the boundary perpendicular to the $x$-axis.
-M-point ... "E=0")
 
 %}}}
-
-
-% \paragraph{}%{{{
-% 
-% %}}}
-
-\paragraph{Properties of photonic band-gaps}
+\paragraph{Properties of photonic band-gaps}%{{{
 at the same wavevector there are two different solutions - there are frequencies where no wave propagates - nodal planes/surfaces can be identified at the PBG boundaries as K=m.2pi/a and all cells have the same field shape except for the sign
 
 photonic band-gaps are new compared to the band gaps arising from permittivity/permeabiliyt resonances, and arae characteristic by not reducing the number of nodal planes 
@@ -980,7 +965,21 @@ photonic band-gaps are new compared to the band gaps arising from permittivity/p
 %  crystals, and he identified the fact that they have a narrow band gap prohibiting
 %  light propagation through the planes. This band gap is angle-dependent
 
+%}}}
+\paragraph{Tight-binding model for photonic band-gaps}%{{{
+The described view of the dispersion was 
+A different view to the formation of the dispersion curves can be drawn in analogy with the \textit{tight-binding} model in solid-state physics, first analyzing the unit cells isolated in free space, and then taking into account their mutual interaction that shifts the frequency up, or down. \label{hopping}
+The 
+This is . %-- individual oscillators with frequency more-or-less dependent on
 
+Returning to the figure of dispersion curves in a periodic structure, % TODO ref
+the $\Gamma$ point in the Brillouin zone, where $k = 0$, can be identified with Neumann boundary conditions, where we require $dE/dx = 0$ (otherwise the derivative of the field $E$ would not be continuous). % this also holds for other boundaries, on the $y$- and $z$-axis
+
+In contrast, the $X$ point, where $k_x = 2\pi/a_x$, corresponds to the Dirichlet boundary condition at the boundary perpendicular to the $x$-axis.
+M-point ... "E=0")
+
+
+%}}}
 \subsection{Metamaterials and homogenization}
 \mdf{
 Homogenization is not a search for an existing truth, but rather a somewhat arbitrary decision.
